infra/kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devtracker-backend
  namespace: devtracker
  labels:
    app: devtracker-backend
    version: v1
    component: backend
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: devtracker-backend
  template:
    metadata:
      labels:
        app: devtracker-backend
        component: backend
    spec:
      containers:
      - name: backend
        image: kanhaiyatiwari/devtracker-backend:de79036be6e602f2f8e0dc923a111118a6e5df1c
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
          name: http
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
